Fix NPE in market overview summary when index day % is null
List.of forbids null elements; use Arrays.asList when iterating
nullable Double session moves from partial Yahoo responses.

Co-authored-by: Cursor <cursoragent@cursor.com>